# sh4zam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.kos  README  README.md  sh4_cdefs.h  sh4_intrin.h  sh4_matrix.h  sh4_quat.h  sh4_vector.h  sh4_vector.hpp  sh4_xmtrx.h  shz_cdefs.h  shz_intrin.h  shz_intrin.hpp  shz_matrix.h  shz_mem.h  shz_mem.hpp  shz_mem.s  shz_quat.h  shz_scalar.h  shz_scalar.hpp  shz_trig.h  shz_trig.hpp  shz_vector.h  shz_vector.hpp  shz_xmtrx.h  shz_xmtrx.hpp
doc/: Doxyfile  guide.dox  resources.dox  tips.dox
example/bruces_balls/: Makefile  bruces_balls.c
example/pvr_dma/: Makefile  README.md  pvr_dma.c
example/pvr_dma/romdisk/test/: untitled.mtl
include/sh4zam/: shz_cdefs.h  shz_cdefs.hpp  shz_circle.h  shz_circle.hpp  shz_complex.h  shz_complex.hpp  shz_fpscr.h  shz_matrix.h  shz_matrix.hpp  shz_matrix.inl.h  shz_mem.h  shz_mem.hpp  shz_mem.inl  shz_mem.inl.h  shz_quat.h  shz_quat.hpp  shz_quat.inl.h  shz_scalar.h  shz_scalar.hpp  shz_scalar.inl  shz_scalar.inl.h  shz_sh4zam.h  shz_sh4zam.hpp  shz_trig.h  shz_trig.hpp  shz_trig.inl  shz_trig.inl.h  shz_vector.h  shz_vector.hpp  shz_vector.inl  shz_vector.inl.h  shz_version.h  shz_version.hpp  shz_xmtrx.h  shz_xmtrx.hpp  shz_xmtrx.inl  shz_xmtrx.inl.h
include/sh4zam/inline/: shz_complex.inl.h  shz_matrix.inl.h  shz_mem.inl.h  shz_quat.inl.h  shz_scalar.inl.h  shz_trig.inl.h  shz_vector.inl.h  shz_xmtrx.inl.h
include/sh4zam/inline/dc/: shz_mem_dc.inl.h  shz_quat_dc.inl.h  shz_scalar_dc.inl.h  shz_trig_dc.inl.h  shz_vector_dc.inl.h
include/sh4zam/inline/sh4/: shz_matrix_sh4.inl.h  shz_mem_sh4.inl.h  shz_quat_sh4.inl.h  shz_scalar_sh4.inl.h  shz_trig_sh4.inl.h  shz_vector_sh4.inl.h  shz_xmtrx_sh4.inl.h
include/sh4zam/inline/sw/: shz_matrix_sw.inl.h  shz_mem_sw.inl.h  shz_quat_sw.inl.h  shz_scalar_sw.inl.h  shz_trig_sw.inl.h  shz_vector_sw.inl.h  shz_xmtrx_sw.inl.h
source/: shz_circle.c  shz_complex.c  shz_matrix.c  shz_mem.s  shz_quat.c  shz_version.c  shz_xmtrx.c  shz_xmtrx.s
source/sh4/: shz_complex_sh4.c  shz_mem_sh4.s  shz_xmtrx_sh4.s
source/sw/: shz_complex_sw.c  shz_xmtrx_sw.c
test/: CMakeLists.txt  shz_complex_test_suite.cpp  shz_intrin_test_suite.cpp  shz_matrix_test_suite.cpp  shz_mem_test_suite.cpp  shz_quat_test_suite.cpp  shz_scalar_test_suite.cpp  shz_test.c  shz_test.h  shz_test.hpp  shz_trig_test_suite.cpp  shz_vector_test_suite.cpp  shz_xmtrx_test_suite.cpp
util/: shz_versioning.py
